RESOLVED FIXED268331
[tvOS] Hosting app crashes due to unrecognized selector exceptions during fullscreen media playback
https://bugs.webkit.org/show_bug.cgi?id=268331
Summary [tvOS] Hosting app crashes due to unrecognized selector exceptions during ful...
Andy Estes
Reported 2024-01-29 14:23:28 PST
[tvOS] Hosting app crashes due to unrecognized selector exceptions during fullscreen media playback
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-29 14:23:44 PST
Andy Estes
Comment 2 2024-01-29 14:26:32 PST
EWS
Comment 3 2024-01-29 21:00:30 PST
Committed 273723@main (57f207cd5934): <https://commits.webkit.org/273723@main> Reviewed commits have been landed. Closing PR #23462 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.