[tvOS] Hosting app crashes due to unrecognized selector exceptions during fullscreen media playback https://bugs.webkit.org/show_bug.cgi?id=268331 rdar://121881715

Reviewed by Jean-Yves Avenard.

Implemented selectors expected by AVKit on WebKit's WebAVPlayerLayer, WebAVPlayerViewControllerDelegate, and WebAVMediaSelectionOption subclasses.
While here, fixed the unified sources build by adding some imports.

* Source/WebCore/platform/cocoa/WebAVPlayerLayer.mm:
(-[WebAVPlayerLayer avkit_isVisible]):
(-[WebAVPlayerLayer avkit_videoRectInWindow]):
* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.mm:
(-[WebAVPlayerViewControllerDelegate playerViewControllerShouldDismiss:]):
* Source/WebCore/platform/ios/WebAVPlayerController.mm:
(-[WebAVMediaSelectionOption copyWithZone:]):
(-[WebAVMediaSelectionOption avkit_mediaRemoteIdentifier]):
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:

Canonical link: https://commits.webkit.org/273723@main